Panel: 3D-ing reveal panel content and page sections in content wrap. Fixes #5831

--- a/css/structure/jquery.mobile.panel.css
+++ b/css/structure/jquery.mobile.panel.css
@@ -68,7 +68,11 @@
 /* hardware acceleration for smoother transitions */
 .ui-panel-animate.ui-panel:not(.ui-panel-display-reveal),
 .ui-panel-animate.ui-panel:not(.ui-panel-display-reveal) > div,
+.ui-panel-animate.ui-panel-closed.ui-panel-display-reveal > div,
 .ui-panel-animate.ui-panel-content-wrap,
+.ui-panel-animate.ui-panel-content-wrap > .ui-header,
+.ui-panel-animate.ui-panel-content-wrap > .ui-content,
+.ui-panel-animate.ui-panel-content-wrap > .ui-footer,
 .ui-panel-animate.ui-panel-content-fixed-toolbar {
 	-webkit-backface-visibility: hidden;
 	-webkit-transform: translate3d(0,0,0);
